Flot 0.x
--------

New features:

- Added support for disabling interactivity for specific data series
  (request from Ronald Schouten and Steve Upton).

- Added support for having the autoscale algorithm skip points outside
  an axis range (autoscaleSkipPointsOutside on an axis).

- Flot now calls $() on the placeholder and optional legend container
  passed in so you can specify DOM elements or CSS expressions to make
  it easier to use Flot with libraries like Prototype or Mootools.

Bug fixes:

- Fixed two corner-case bugs when drawing filled curves (report and
  analysis by Joshua Varner).
- Fix auto-adjustment code when setting min to 0 for an axis where the
  dataset is completely flat on that axis (report by chovy).
- Fixed a bug with passing in data from getData to setData when the
  secondary axes are used (issue 65, reported by nperelman).
- Fixed so that it is possible to turn lines off when no other chart
  type is shown (based on problem reported by Glenn Vanderburg), and
  fixed so that setting lineWidth to 0 also hides the shadow (based on
  problem reported by Sergio Nunes).
- Updated mousemove position expression to the latest from jQuery (bug
  reported by meyuchas).
- Use borders instead of background in legend (fix printing issue 25
  and 45).
- Explicitly convert axis min/max to numbers.
- Fixed a bug with drawing marking lines with different colors
  (reported by Khurram).
- Fixed a bug with returning y2 values in the selection event (fix
  by exists, issue 75).


Flot 0.5
--------

Backwards API change summary: Timestamps are now in UTC. Also
"selected" event -> becomes "plotselected" with new data, the
parameters for setSelection are now different (but backwards
compatibility hooks are in place), coloredAreas becomes markings with
a new interface (but backwards compatibility hooks are in place).


Interactivity: added a new "plothover" event and this and the
"plotclick" event now returns the closest data item (based on patch by